--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Countdown Timer</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BMI Calculator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="countdown">
-    <h2>Countdown Timer</h2>
-    <div id="timer">
-      <div>
-        <span id="days">0</span>
-        <span>Days</span>
-      </div>
-      <div>
-        <span id="hours">0</span>
-        <span>Hours</span>
-      </div>
-      <div>
-        <span id="minutes">0</span>
-        <span>Minutes</span>
-      </div>
-      <div>
-        <span id="seconds">0</span>
-        <span>Seconds</span>
-      </div>
+    <div class="container">
+        <h1>BMI Calculator</h1>
+        <div class="input-group">
+            <label for="weight">Weight (kg):</label>
+            <input type="number" id="weight" placeholder="Enter weight in kilograms">
+        </div>
+        <div class="input-group">
+            <label for="height">Height (m):</label>
+            <input type="number" id="height" placeholder="Enter height in meters">
+        </div>
+        <button onclick="calculateBMI()">Calculate BMI</button>
+        <div id="result"></div>
     </div>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
